feat: handling model loading at Scene page

--- a/front/src/app/pages/scene/scene.html
+++ b/front/src/app/pages/scene/scene.html
@@ -1,1 +1,8 @@
+@if (errors().length > 0) {
+<app-error [errors]="errors()"></app-error>
+} @else { @if (isLoading()) {
+<app-loading [loadings]="loadings()"></app-loading>
+}
+
 <canvas #canvas></canvas>
+}
