--- a/front/src/app/components/error/error.scss
+++ b/front/src/app/components/error/error.scss
@@ -1,14 +1,22 @@
 :host {
     width: 100%;
     height: 100%;
-    max-width: 400px;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 20px;
 
-    & > span {
-        text-wrap: pretty;
+    #wrapper {
+        width: 100%;
+        height: 100%;
+        max-width: 400px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 20px;
+
+        & > span {
+            text-wrap: pretty;
+        }
     }
 }
