--- a/front/src/app/components/loading/loading.html
+++ b/front/src/app/components/loading/loading.html
@@ -1,9 +1,15 @@
-<h1>Loading{{ '.'.repeat((tick() % 3) + 1) }}</h1>
+<h1>
+    {{ isDownloading() ? 'Downloading' : 'Adding to the Scene' }}{{ '.'.repeat((tick() % 3) + 1) }}
+</h1>
 
 <div id="loading">
-    @for (state of loadings; track state.name) {
+    @for (state of loadings(); track state.name) {
     <span>{{ state.name }}</span>
+    @if (state.inScene) {
+    <span>In Scene</span>
+    } @else {
     <span>{{ state.progress.toFixed(0) }}%</span>
+    }
     <app-progress-bar [value]="state.progress" />
     }
 </div>
