--- a/front/src/app/pages/scene/scene.html
+++ b/front/src/app/pages/scene/scene.html
@@ -1,7 +1,7 @@
 @if (errors().length > 0) {
 <app-error [errors]="errors()"></app-error>
 } @else { @if (isLoading()) {
-<app-loading [loadings]="loadings()"></app-loading>
+<app-loading [loadings]="loadings"></app-loading>
 }
 
 <canvas #canvas></canvas>
