--- a/front/src/app/pages/scene/scene.scss
+++ b/front/src/app/pages/scene/scene.scss
@@ -6,3 +6,10 @@
     width: 100%;
     height: 100%;
 }
+
+app-switch {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    z-index: 20;
+}
