--- a/front/src/app/components/progress-bar/progress-bar.scss
+++ b/front/src/app/components/progress-bar/progress-bar.scss
@@ -1,8 +1,10 @@
 .border {
-    border: 6px solid transparent;
+    border: 4px solid transparent;
     height: 100%;
+    border-radius: 100px;
 }
 
 .progress-bar {
     height: 100%;
+    border-radius: 100px;
 }
