--- a/front/src/app/components/loading/loading.scss
+++ b/front/src/app/components/loading/loading.scss
@@ -10,6 +10,7 @@
     flex-direction: column;
     gap: 20px;
     background: hsl(0, 0%, 100%);
+    font-family: 'Orbitron', sans-serif;
 }
 
 #loading {
