--- a/front/src/styles.scss
+++ b/front/src/styles.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&family=Orbitron:wght@400..900&display=swap');
 * {
     border: 0;
     margin: 0;
